<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/raw_splash_screen"
        android:scaleType="centerCrop"/>

<!--    <ImageView-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="160dp"-->
<!--        android:layout_marginTop="60dp"-->
<!--        android:src="@drawable/ic_logo_text"-->
<!--        android:layout_centerHorizontal="true"/>-->

<!--    <com.sdsmdg.harjot.longshadows.LongShadowsWrapper-->
<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:layout_centerHorizontal="true">-->

<!--        <com.sdsmdg.harjot.longshadows.LongShadowsImageView-->
<!--            android:layout_width="120dp"-->
<!--            android:layout_height="120dp"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:src="@drawable/ic_logo_text"/>-->

<!--    </com.sdsmdg.harjot.longshadows.LongShadowsWrapper>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="56dp"
                android:text="@string/signup2"
                android:textColor="@color/white"
                android:textSize="28sp"/>
            <EditText
                android:id="@+id/et_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_custom"
                android:ems="10"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="7dp"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textSize="14dp"
                android:textColor="@color/black_2"
                android:hint="@string/uname"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="10dp"
                android:background="@drawable/input_custom"
                android:padding="12dp"
                android:textSize="14dp"
                android:textColor="@color/black_2"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="15dp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="7dp"
                android:background="@drawable/input_custom"
                android:padding="12dp"
                android:textSize="14dp"
                android:textColor="@color/black_2"
                android:hint="@string/pass"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="44dp"
                    android:paddingRight="44dp">

                    <TextView
                        android:id="@+id/tv_regis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/don"
                        android:textColor="@color/white"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/regis"
                        android:textStyle="bold"
                        android:gravity="end"
                        android:textColor="@color/white"/>
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:height="55dp"
                    android:textAllCaps="false"
                    android:layout_marginTop="10dp"
                    android:textSize="14dp"
                    android:background="@drawable/ic_btn_c1"
                    />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>