<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars"/>
            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="-100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_rectangle" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black_2"
            tools:text="@string/nama" />

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/weary_cat_face"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/nil"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_tlp"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_btn_tlp"
                android:fontFamily="@font/poppins_semibold"
                app:icon="@drawable/ic_baseline_phone_24"

                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/desc"
    android:layout_marginTop="20dp"
    android:textSize="20sp"
    android:fontFamily="@font/poppins_semibold"
    android:textColor="@color/black_2"/>
    <TextView
        android:id="@+id/tv_item_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:maxLines="2"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/gray_3"
        tools:text="@string/detail" />


</LinearLayout>

            </FrameLayout>
</LinearLayout>