<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/raw_splash_screen"
        android:scaleType="centerCrop"/>

    <!--    <ImageView-->
    <!--        android:layout_width="160dp"-->
    <!--        android:layout_height="160dp"-->
    <!--        android:layout_marginTop="60dp"-->
    <!--        android:src="@drawable/ic_logo_text"-->
    <!--        android:layout_centerHorizontal="true"/>-->

        <com.sdsmdg.harjot.longshadows.LongShadowsWrapper
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">

            <com.sdsmdg.harjot.longshadows.LongShadowsImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_logo_text"/>

        </com.sdsmdg.harjot.longshadows.LongShadowsWrapper>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="150dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/signup2"
            android:textColor="@color/black"
            android:textSize="28sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/be_happy"
                android:height="55dp"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:textSize="14dp"
                android:background="@drawable/ic_btn_c1"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>