<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_adopt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/adopt"
                android:textColor="@color/green_1"
                android:textSize="28sp"
                />
            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/me"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:layout_toRightOf="@+id/tv_adopt"/>
            <TextView
                android:id="@+id/tv_slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/slogan"
                android:textColor="@color/gray_3"
                android:textSize="16sp"
                android:layout_below="@id/tv_me"/>
        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    style="@style/CardMargin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="30dp"
                                android:fontFamily="@font/poppins_semibold"
                                android:text="@string/c1"
                                android:textColor="@color/black"
                                android:textSize="15sp" />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:text="@string/browser"
                                android:fontFamily="@font/poppins_semibold"
                                android:background="@drawable/ic_btn_c1"
                                android:layout_marginLeft="20dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                android:textAllCaps="false"/>
                        </LinearLayout>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CardMargin"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/weary_cat_face"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="15dp"
                    app:cardElevation="4dp"
                    android:layout_width="300dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"
                    style="@style/CardMargin">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="30dp"
                                android:fontFamily="@font/poppins_semibold"
                                android:text="@string/c1"
                                android:textColor="@color/black"
                                android:textSize="15sp" />
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="35dp"
                                android:text="@string/browser"
                                android:fontFamily="@font/poppins_semibold"
                                android:background="@drawable/ic_btn_c1"
                                android:layout_marginLeft="20dp"
                                android:layout_marginBottom="20dp"
                                android:textSize="12sp"
                                android:textAllCaps="false"/>
                        </LinearLayout>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/CardMargin"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/weary_cat_face"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </HorizontalScrollView>

<!--        <Button-->
<!--            android:id="@+id/btn_menu"-->
<!--            android:text="SHOW"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_row_cat" />
    </LinearLayout>
</ScrollView>